# ercot_sim_weather_forecasts

./: CLAUDE.md  README_build_node_coordinates.md  create_plots.py  ercot_simulation_README.txt  helper_funcs.py  main.py  planning.md  process_ercot.py  pyproject.toml  scratch.py
analysis/: cluster_node_lr.qmd  local_node_lr.qmd
data/: damSpp2_html_source.txt  damSpp7_html_source.txt  rtmLmp_html_source.txt  rtmSpp_html_source.txt
data/60_Day_SCED_Disclosure/: 60d_HDL_LDL_ManOverride-10-APR-25.csv  60d_SCED_DSR_Load_Data-10-APR-25.csv  60d_SCED_EOC_Updates_in_OpHour-10-APR-25.csv  60d_SCED_QSE_Self_Arranged_AS-10-APR-25.csv
download_data/: README.md  pull_eia860.py  pull_ercot.py  pull_hrrr.py  pull_ndfd.py  pull_np4160.py  pull_weatherstation.py  validate_data.py
hourly_dlr_scuc/: formpyomo_UC.py  run_scuc_annual_dlr.py  uc_function_dlr.py
hourly_dlr_scuc/dynamic_rating_result/: dynamic_rating_L1.txt  dynamic_rating_L10.txt  dynamic_rating_L100.txt  dynamic_rating_L101.txt  dynamic_rating_L102.txt  dynamic_rating_L103.txt  dynamic_rating_L104.txt  dynamic_rating_L105.txt  dynamic_rating_L108.txt  dynamic_rating_L109.txt  dynamic_rating_L11.txt  dynamic_rating_L110.txt  dynamic_rating_L111.txt  dynamic_rating_L112.txt  dynamic_rating_L113.txt  dynamic_rating_L114.txt  (+167 more)
power_flow_replication/: cems_download.py  epi_api.py
process_data/: calculate_forecast_errors.py  prepare_cluster_level_data.py  prepare_node_level_data.py  process_ercot.py  validate_data.py
scuc/: Line_annual_Dmin.txt  formpyomo_UC.py  power_mod.py  run_scuc_annual.py  uc_function.py
(+1126 files in other folders)
