[project]
name = "synthetic-ercot"
version = "0.1.0"
description = "Synthetic ERCOT power grid simulation project"
requires-python = ">=3.11"
dependencies = [
    "gurobipy>=13.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyomo>=6.9.5",
    "pypower>=5.1.19",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
    "xarray>=2024.1.0",
    "cfgrib>=0.9.10",
    "netcdf4>=1.6.0",
    "geopandas>=1.1.2",
    "cartopy>=0.25.0",
]
